# rustylisa

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  data.csv
results/baseline/case_0/: parameters.json
results/baseline/case_1/: parameters.json
results/baseline/case_10/: parameters.json
results/baseline/case_11/: parameters.json
results/baseline/case_5/: data.csv  (+1 more)
src/: constants.rs  data_point.rs  gen_tests.rs  lib.rs  main.rs  mod.rs
src/case_info/: case_info.rs
src/case_supervisor/: case_supervisor.rs  case_supervisor_new.rs  mod.rs  run_simulation.rs  save_parameters_to_json.rs  save_results.rs  save_to_csv.rs
src/my_app/: mod.rs  my_app.rs
src/plotting/: plotting.rs
src/simulation_runner/: mod.rs  run_all_simulations.rs  run_simulation.rs  simulation_runner.rs  simulation_runner_new.rs
src/spin_data/: mod.rs  spin_data.rs  spin_data_new.rs
src/spin_evolver/: adjust_past.rs  do_step_succeeded.rs  get_spin_data.rs  mod.rs  new_spin_evolver.rs  spin_evolver.rs  spin_evolver_new.rs
src/test_case/: mod.rs  new_test_case.rs  test_case.rs  test_case_functions.rs  test_case_new.rs
src/vcalculator/: mod.rs  psi_orb_for_last_v.rs  v_at_time.rs  v_dot_for_last_v.rs  vcalculator.rs  vcalculator_new.rs
src/wave_builder/: CalculateAmplitudes.rs  CalculateWaveFactors.rs  calculate_amplitudes.rs  calculate_wave_factors.rs  didDetectorStepOK.rs  did_detector_step_ok.rs  mod.rs  savedata.rs  sum_source.rs  wave_builder.rs  wave_builder_new.rs
src/wave_generator_app/: mod.rs  ui.rs  view.rs  wave_generator_app.rs
tests/: regression_test.rs
(+18 files in other folders)
