[package]
name = "rustylisa"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
libm = "0.2.8"
plotters = "0.3"  
egui_plot = "0.23"
eframe = "0.23"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rfd = "0.12"    # For file dialogs
csv = "1.1"     # For CSV parsing
serde_json = "1.0"
rand = "0.8"        # For random number generation
rand_distr = "0.4" 
