[package]
name = "rustylisa"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"     

egui_plot = "0.23"
eframe = "0.23"
tokio = { version = "1", features = ["full"] }
rfd = "0.12"    

rand = "0.8"        
rand_distr = "0.4" 
libm = "0.2.8"
